添加注册数据与最近操作看板
